tree-sitter/test/corpus/blocks.txt
==================
Simple block
==================

def: foo()
  bar()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (call
        (symbol)))))

==================
Block with multiple body forms
==================

def: foo()
  bar()
  baz()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (call
        (symbol))
      (call
        (symbol)))))

==================
Nested blocks
==================

def: foo()
  let: [x 1]
    bar(x)

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (block_call
        (symbol)
        (vector
          (symbol)
          (int))
        (block_body
          (call
            (symbol)
            (symbol)))))))

==================
Block inline (no body)
==================

if: pred then else

---

(source_file
  (block_call
    (symbol)
    (symbol)
    (symbol)
    (symbol)))

==================
Nested block returns to outer
==================

def: foo()
  when: pred
    side-effect()
  result()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (block_call
        (symbol)
        (symbol)
        (block_body
          (call
            (symbol))))
      (call
        (symbol)))))

==================
do block
==================

do:
  foo()
  bar()
  baz()

---

(source_file
  (block_call
    (symbol)
    (block_body
      (call
        (symbol))
      (call
        (symbol))
      (call
        (symbol)))))

==================
Block inside vector
==================

let: [a if: pred
          then
          else]
  let-body

---

(source_file
  (block_call
    (symbol)
    (vector
      (symbol)
      (block_call
        (symbol)
        (symbol)
        (block_body
          (symbol)
          (symbol))))
    (block_body
      (symbol))))

==================
Block inside parens
==================

(def: foo()
  bar())

---

(source_file
  (list
    (block_call
      (symbol)
      (call
        (symbol))
      (block_body
        (call
          (symbol))))))

==================
Deeply nested then rapid dedent
==================

def: foo()
  if: a
    if: b
      if: c
        deep()
  result()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (block_call
        (symbol)
        (symbol)
        (block_body
          (block_call
            (symbol)
            (symbol)
            (block_body
              (block_call
                (symbol)
                (symbol)
                (block_body
                  (call
                    (symbol))))))))
      (call
        (symbol)))))

==================
Blank line in block body
==================

def: foo()
  bar()

  baz()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (call
        (symbol))
      (call
        (symbol)))))

==================
Blank line before dedent
==================

def: foo()
  bar()

baz()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (call
        (symbol))))
  (call
    (symbol)))

==================
Blank line then return to outer block
==================

def: foo()
  if: a
    deep()

  back()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (block_call
        (symbol)
        (symbol)
        (block_body
          (call
            (symbol))))
      (call
        (symbol)))))

==================
Whitespace-only line in block body
==================

def: foo()
  bar()

  baz()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (call
        (symbol))
      (call
        (symbol)))))

==================
Whitespace-only line with less indent than block
==================

def: foo()
  bar()
 
  baz()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (call
        (symbol))
      (call
        (symbol)))))

==================
Whitespace-only line with more indent than block
==================

def: foo()
  bar()
     
  baz()

---

(source_file
  (block_call
    (symbol)
    (call
      (symbol))
    (block_body
      (call
        (symbol))
      (call
        (symbol)))))

==================
Multiple sibling def statements
==================

do:
  def: foo(x) x
  def: bar(y) y

---

(source_file
  (block_call
    (symbol)
    (block_body
      (block_call
        (symbol)
        (call
          (symbol)
          (symbol))
        (symbol))
      (block_call
        (symbol)
        (call
          (symbol)
          (symbol))
        (symbol)))))

